# offline-release-manager

./: .gitignore  LICENCE  README.md  pyproject.toml
dev/release_input/: publish_release.py  release.json
docs/: design_decisions.md  failure_modes.md  overview.md
fake_app/: app.bat  checksum.sha256
launcher/: launcher.py  machine_id.py  verifier.py  version_selector.py
manifest/: example_manifest.json
release_bundle/: releases.json
release_store/: install.py  paths.py  registry.py
runtime/: bootstrap.py  installer.py  launcher.py  logger.py  paths.py  release_index.py  ui.py  verifier.py
utils/: logging.py
