[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-release-manager"
version = "0.1.0"
description = "Offline-first launcher-based system for managing versioned application releases in constrained environments."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaan Ulk", email = "kaan@example.com"}
]
requires-python = ">=3.9"

dependencies = []

[project.urls]
Repository = "https://github.com/yourusername/offline-release-manager"
Issues = "https://github.com/yourusername/offline-release-manager/issues"

[tool.setuptools]
packages = [
    "launcher",
    "release_store",
    "utils"
]
