[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-release-system"
version = "1.0.0"
description = "Developer-controlled offline release and launcher system"
name = "offline-release-system"
version = "1.0.0"
description = "Developer-controlled offline release and launcher system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "M. Kağan ÜLKER" }
]

dependencies = []

[tool.setuptools]
packages = [
  "runtime"
]
